[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "walk-watcher"
version = "0.6.0"
requires-python = ">=3.8"
description = "Watches directories and files."
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ email = "preocts@preocts.com", name = "Preocts" }]
maintainers = []
keywords = []
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: Implementation :: CPython",
]
dependencies = []

[project.optional-dependencies]
dev = [
    "pre-commit",
    "black",
    "mypy",
    "flake8",
    "flake8-builtins",
    "flake8-pep585",
]
test = ["pytest", "pytest-randomly", "coverage", "nox"]

[project.urls]
homepage = "https://github.com/Preocts/walk-watcher"
# documentation = ""
# repository = ""
# changelog = ""

# CLI scripts if needed
[project.scripts]
walk-watcher = "walk_watcher.__main__:main"

[tool.setuptools.package-data]
"walk_watcher" = ["py.typed"]

[tool.mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_incomplete_defs = false
disallow_untyped_defs = false
warn_unused_ignores = false

[tool.coverage.run]
branch = true
source = ["tests"]
source_pkgs = ["walk_watcher"]

[tool.coverage.paths]
source = ["src/", "*/site-packages"]
test = ["tests/", "*/tests"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "\\.\\.\\.",
    "if TYPE_CHECKING:",
]
